--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/gsap": "^3.0.0",
     "bootstrap": "^5.2.2",
     "gsap": "^3.11.3",
+    "ng2-smart-table": "^1.7.2",
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
