--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
             ]
